chore: Add Swagger comments
